ingress-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: harbor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testing-harbor-portal
            port:
              number: 80
